fix home typeahead align

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -25,19 +25,14 @@ p.large {
 	font-size: 16px;
 }
 .form.search {
-	&.main {
-		.input {
-			width: 70%;
-		}
-	}
 	&.real {
 		.input {
 			width: 50%;
 		}
 	}
-	.results {
-		left: 5%;
-		width: 70%;
+	&.main .field {
+		width: 80%;
+		margin:0 auto
 	}
 }
 .ui.stackable.middle .column {
